syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "akkaserverless/annotations.proto";

import "domain/wirelessmeshdomain.proto";

package devicecontrol;

service DeviceControlService {
    rpc SendNightlightToggled(wirelessmeshdomain.NightlightToggled) returns (google.protobuf.Empty) {
        option (akkaserverless.method).eventing = {
            in: {
                event_sourced_entity: "customer-location-entity";
            }
        };
    }

    // handle other events which are not managed above
    rpc CatchOthers(google.protobuf.Any) returns (google.protobuf.Empty) {
        option (akkaserverless.method).eventing = {
            in: {
                event_sourced_entity:  "customer-location-entity"
            }
        };
    };
}
